# todo-txt-tui

./: .gitignore  README.md  pyproject.toml  todo.txt.md  troubleshooting.md
.config/todo-txt-tui/: palette.conf  settings.conf
todo_txt_tui/: core.py
