[build-system]
requires = ["setuptools", "wheel"]

[project]
name = 'todo-txt-tui'
version = '0.2.0'
description = 'A powerful, keyboard-driven terminal application for managing todo.txt files.'
readme = "README.md"
authors = [{name = 'mdillondc'}]
dependencies = [
    "urwid",
    "python-dateutil",
    "aiohttp"
]

[tool.setuptools]
packages = ["todo_txt_tui"]

[project.scripts]
todo-txt-tui = "todo_txt_tui.core:entry_point"
